--- a/Sprint 2 - GovernanceToken/package.json
+++ b/Sprint 2 - GovernanceToken/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.8.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2"
+    "@openzeppelin/contracts": "^4.4.2",
+    "sleepfor": "^0.0.2"
   }
 }
